hotfix: Fixed scrollbar bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -91,14 +91,24 @@ body {
   translate: no;
 }
 
-html {
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar,
+.lenis::-webkit-scrollbar {
+  display: none !important;
+  width: 0px !important;
+  height: 0px !important;
+  background: transparent !important;
 }
 
-html::-webkit-scrollbar {
-  display: none;
+html,
+body,
+.lenis {
+  scrollbar-width: none !important;
+  -ms-overflow-style: none !important;
+  overflow-y: auto; 
 }
+
 
 h1,
 h2,
